Update the DB password encryption Algo to AES